# mcp-for-instrument

./: .cruft.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.gitlab/issue_templates/: Bug.md
src/unitelabs/mantis/: __init__.py
src/unitelabs/mantis/io/: __init__.py  mantis_protocol.py
tests/: test_version.py
